correct fix for right overflow

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,8 +1,3 @@
-html,
-body {
-    overflow-x: hidden;
-}
-
 #appContainer {
     max-width: 45rem;
     padding: 0px;
